# gb-cartridge

./: CMakeLists.txt  README.md
resources/: bus_timing.json5
src/: cartridge_interface.pio  config.h  main.c  read_addr.pio  rom.c  rom.h  simulation.pio  simulator.c
src/roms/: dummy.c
tools/simulator-host/: 10-print.gb  Cargo.toml
tools/simulator-host/src/: main.rs
